Correcting alignment of content on the pink panels

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,9 +166,19 @@
     background-position: center center;
     height: 500px;
     margin: 0px;
-    padding: 30px;
+    padding: 30px 0px;
     color: #fff;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+#containerIcons
+{
+    margin-top: 10px;
+}
+
+#icon-product
+{
+    margin-top: 10px;
 }
 
 #functions h3
@@ -210,6 +220,7 @@
     font-size: 18pt;
     color: #fff;
     padding: 50px 100px;
+    margin-top: 120px;
 }
 
 #quotes p
@@ -303,7 +314,15 @@
     color:#fff;
 }
 
-#started-words a:hover { text-decoration:underline;}
+#started-words a:hover 
+{ 
+    text-decoration:underline;
+}
+
+#started-video
+{
+    margin-top: 7px;
+}
 
 /* Recent Blog Post*/
 #recent-blog-post 
@@ -352,6 +371,11 @@
     background-size: cover;
     background-position: center center;
     padding: 30px 0px 30px 0px;
+}
+
+#pricing img
+{
+    margin-top: 10px;
 }
 
 #footer
